--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/rajdhani": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "expo": "~45.0.0",
     "expo-barcode-scanner": "~11.3.0",
+    "expo-font": "~10.1.0",
     "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -22,6 +24,7 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4"
   },
