--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/rajdhani": "^0.2.2",
     "@react-navigation/bottom-tabs": "^5.11.15",
-    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native": "^5.9.8",
     "expo": "~45.0.0",
     "expo-barcode-scanner": "~11.3.0",
     "expo-font": "~10.1.0",
@@ -22,9 +22,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "^0.68.2",
-    "react-native-gesture-handler": "^2.5.0",
-    "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.15.0",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.17.7",
     "react-navigation": "^4.4.4"
